test_scores/negative_dimers/features/O15155.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/O15155.pkl.xz